--- a/lab1/css/profile.css
+++ b/lab1/css/profile.css
@@ -40,7 +40,7 @@
 }
 
 .info-card {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(31, 66, 135, 0.8);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -52,7 +52,7 @@
 .info-card h3 {
     font-size: 1.5em;
     margin-bottom: 10px;
-    color: #ffcc00;
+    color: #ffc107;
     text-align: center;
 }
 
