--- a/lab2/css/profile.css
+++ b/lab2/css/profile.css
@@ -40,7 +40,7 @@
 }
 
 .info-card {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(31, 66, 135, 0.8);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -52,7 +52,7 @@
 .info-card h3 {
     font-size: 1.5em;
     margin-bottom: 10px;
-    color: #ffcc00;
+    color: #ffc107;
     text-align: center;
 }
 
@@ -71,28 +71,6 @@
     padding: 5px 0;
     font-size: 0.9em;
     color: white;
-}
-
-.progress-bar {
-    width: 100%;
-    background: #444;
-    border-radius: 10px;
-    overflow: hidden;
-    height: 20px;
-    margin-top: 10px;
-}
-
-.progress {
-    height: 100%;
-    background: #ffcc00;
-    width: 0%;
-    transition: width 1s ease-in-out;
-}
-
-#progress-text {
-    font-size: 1.1em;
-    margin-top: 5px;
-    color: #ffcc00;
 }
 
 @media (max-width: 768px) {
