--- a/lab2/css/styles.css
+++ b/lab2/css/styles.css
@@ -178,7 +178,7 @@ footer {
     font-size: 1.2em;
     margin-bottom: 10px;
     text-transform: uppercase;
-    color: #ff4c4c;
+    color: #ffc107;
 }
 
 @media (max-width: 480px) {
