--- a/lab2/css/games.css
+++ b/lab2/css/games.css
@@ -1,9 +1,11 @@
+.games-container,
 .games-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 30px;
     margin-top: 20px;
 }
+
 
 .game-card {
     background: rgba(31, 66, 135, 0.8);
