--- a/lab2/css/games.css
+++ b/lab2/css/games.css
@@ -6,7 +6,6 @@
     margin-top: 20px;
 }
 
-
 .game-card {
     background: rgba(31, 66, 135, 0.8);
     padding: 20px;
@@ -41,4 +40,25 @@
 
 .play-btn:hover {
     background: #e0a800;
+}
+.fav-btn {
+    background: #ffc107; /* яскравий рожево-червоний */
+    color: #0a192f;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-top: 10px;
+}
+
+.fav-btn:hover {
+    background: #e0a800;
+}
+
+.favorite {
+    transform: scale(1.05);
+    border: 2px solid #e0a800;
+    transition: transform 0.3s ease, border-color 0.3s ease;
 }
