--- a/lab2/css/profile.css
+++ b/lab2/css/profile.css
@@ -100,6 +100,87 @@
 }
 
 
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+}
+
+.comments-section {
+    margin-top: 30px;
+}
+
+form input, form textarea {
+    margin-bottom: 10px;
+    padding: 8px;
+    width: 100%;
+    max-width: 500px;
+    font-size: 1em;
+}
+
+
+.comment-block {
+    border-bottom: 1px solid #cfc;
+    margin-top: 15px;
+    padding-bottom: 10px;
+}
+
+.comment-name {
+
+    font-weight: bold;
+    cursor: pointer;
+    color: #ffc107;
+}
+
+.comment-text.hidden {
+    display: none;
+}
+
+.delete-btn {
+    background: #dc3545;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-top: 5px;
+    margin-left: 7px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.comments-section {
+    margin: 40px auto;
+    max-width: 800px;
+    padding: 20px;
+    background: rgba(31, 66, 135, 0.8);
+    border-radius: 10px;
+}
+
+.comments-section h2{
+    color: #ffc107;
+}
+
+#comment-form input,
+#comment-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #bbb;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#comment-form button {
+    display: block;
+    margin: 0 auto;
+    background: #ffc107;
+    color: #0a192f;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
 @media (max-width: 768px) {
     .profile-info {
         display: flex;
@@ -107,6 +188,9 @@
         justify-content: space-between;
         margin-top: 20px;
         gap: 15px;
+    }
+    form input, form textarea {
+        max-width: 280px;
     }
 }
 
@@ -121,5 +205,8 @@
     .info-card {
         width: 90%; 
         min-width: unset; 
+    }
+    form input, form textarea {
+        max-width: 280px;
     }
 }
