--- a/lab3/src/css/styles.css
+++ b/lab3/src/css/styles.css
@@ -22,6 +22,7 @@ nav {
   background: rgba(255, 255, 255, 0.05);
   padding: 1em;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  box-sizing: border-box;
 }
 
 nav a {
